# Typst-Editor

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
plugins/tauri-plugin-ios-menubar/: .gitignore
public/: font-config.example.json
scripts/: bundled-fonts-manifest.json  download-bundled-fonts.mjs  ensure-macos-appstore-provisionprofile.cjs  gen-macos-appstore-entitlements.cjs  sign-macos-appstore-pkg.cjs  tauri-cli.cjs
src/: App.css  App.svelte  App.tsx  main.ts  monaco-env.ts  theme.css  typst-language.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.macos-appstore.plist.template  build.rs  tauri.conf.json  tauri.macos-appstore.json  tauri.sidecar-lsp.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop-projects.json  mobile-documents.json
src-tauri/icons/: icon.icns
src-tauri/resources/fonts/bundled/: README.md
src-tauri/src/: lib.rs  tinymist_bridge.rs
src/components/: ActivityBar.svelte  CustomSelect.svelte  EditorPreviewSplit.svelte  EditorQuickActions.svelte  EmbedPdfPane.svelte  ExplorerRenameModal.svelte  ExportTypstModal.svelte  FilePreviewPane.svelte  FontSelectTypst.svelte  Header.svelte  InAppMenu.svelte  InitialPage.svelte  IosImportZipProjectModal.svelte  IosProjectHub.svelte  Modal.svelte  MonacoEditorPane.svelte  PaneResizeGrip.svelte  SaveAsModal.svelte  SettingsModal.svelte  ShortcutEditor.svelte  ShortcutListener.svelte  Sidebar.svelte  SvgPreview.svelte
src/lib/: appCommands.ts  appCompileTypst.ts  appExplorerPaths.ts  appExportStaging.ts  appImportZip.ts  appLayoutStorage.ts  appMeta.ts  appMonacoSelect.ts  appPaneResizeGeometry.ts  appProjectWrite.ts  appTypstExport.ts  appTypstFileNames.ts  assetPreviewUrl.ts  catppuccinAltThemes.ts  desktopProjectFs.ts  editorLanguage.ts  embedPdfAppChrome.ts  exportTypstKindPayload.ts  folderExplorerTree.ts  iosProjects.ts  ipadOs.ts  markdownPreview.ts  monacoLinkOpener.ts  monacoThemes.ts  projectFileOps.ts  shortcuts.ts  tinymistLsp.ts  tinymistWasmFs.ts  typstFontPresets.ts  typstFonts.ts  vscodeThemeMonacoData.ts
src/themes/: alt-dark.jsonc  alt-light.jsonc
