[package]
name = "typst-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typst_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "process"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "0.14.2"
typst-svg = "0.14.2"
typst-pdf = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-kit = { version = "0.14.2", default-features = true }
comemo = "0.5.1"
chrono = "0.4.44"
zip = { version = "2", default-features = false, features = ["deflate"] }
url = "2"
typst-html = "0.14.2"
resvg = "0.44"
png = "0.17"
typst-library = "0.14.2"

