[package]
name = "typst-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "typst_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
crossbeam-channel = "0.5.15"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }

# Tinymist LSP (in-process; same versions as tinymist workspace — patches below unify `typst`).
tinymist = { path = "../../tinymist/crates/tinymist", default-features = false, features = [
    "system",
    "no-content-hint",
] }
sync-ls = { path = "../../tinymist/crates/sync-lsp", default-features = false, features = [
    "lsp",
    "server",
    "system",
] }

typst = "0.14.2"
typst-svg = "0.14.2"
typst-pdf = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-kit = { version = "0.14.2", default-features = true }
comemo = "0.5.1"
chrono = "0.4.44"
zip = { version = "2", default-features = false, features = ["deflate"] }
url = "2"
typst-html = "0.14.2"
resvg = "0.44"
png = "0.17"
typst-library = "0.14.2"

[patch.crates-io]
typst = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-macros = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-library = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-html = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-timing = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-svg = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-render = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-pdf = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-syntax = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }
typst-eval = { git = "https://github.com/Myriad-Dreamin/typst.git", tag = "tinymist/v0.14.6-rc2" }

reflexo = { git = "https://github.com/Myriad-Dreamin/typst.ts/", rev = "c078ddf869d9438b36e1cacb65100e4514780dc1" }
reflexo-typst = { git = "https://github.com/Myriad-Dreamin/typst.ts/", rev = "c078ddf869d9438b36e1cacb65100e4514780dc1" }
reflexo-vec2svg = { git = "https://github.com/Myriad-Dreamin/typst.ts/", rev = "c078ddf869d9438b36e1cacb65100e4514780dc1" }

typst-shim = { path = "../../tinymist/crates/typst-shim" }
tinymist-analysis = { path = "../../tinymist/crates/tinymist-analysis" }
tinymist-std = { path = "../../tinymist/crates/tinymist-std" }
tinymist-vfs = { path = "../../tinymist/crates/tinymist-vfs" }
tinymist-world = { path = "../../tinymist/crates/tinymist-world" }
tinymist-project = { path = "../../tinymist/crates/tinymist-project" }
tinymist-task = { path = "../../tinymist/crates/tinymist-task" }
